# django-filtersmerger

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
django_filtersmerger/: __init__.py  apps.py  filter.py  merger.py  params.py  total.py  utils.py
django_filtersmerger/templatetags/: filtersmerger_utils.py
docs/: conf.py  configurations.rst  index.rst
