[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-filtersmerger"
dynamic = ["version"]
description = ""
authors = [
    {name = "MPA Solutions", email = "info@mpasol.it"},
]
license = {text = "GNU GPLv3 License"}
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    {file = "requirements.txt"},
]

[project.urls]
Homepage = "https://github.com/MPASolutions/django-filtersmerger"

[tool.setuptools]
include-package-data = true
packages = ["find:"]
exclude-packages = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "django_filtersmerger.__init__.__version__"}
long-description = {file = ["README.rst", "CHANGELOG.rst"], content-type = "text/x-rst"}

[tool.setuptools.scripts]
publish = "scripts.publish:main"
tag = "scripts.tag:main"

[tool.isort]
profile = "black"
combine_as_imports = true
include_trailing_comma = true
line_length = 119
src_paths = ["django_filtersmerger"]

[tool.black]
line-length = 119
skip-magic-trailing-comma = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
extend-ignore = ["E203",]
max-line-length = 119
exclude = ["django_filtersmerger/migrations", ".git", ".tox", "docs", "build", "dist"]
# max-complexity = 15

# [tool.pytest.ini_options]
# DJANGO_SETTINGS_MODULE = "prjcore.settings"
# python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
# filterwarnings = [
#     "error",
#     "ignore::DeprecationWarning:",
#     "ignore::django.utils.deprecation.RemovedInDjango60Warning",
#     "ignore::cryptography.utils.CryptographyDeprecationWarning",
# ]
